Fix indentation in .cs files (tabs, not spaces)

--- a/.editorconfig
+++ b/.editorconfig
@@ -12,7 +12,5 @@ indent_style = space
 trim_trailing_whitespace = false
 
 [*.cs]
-indent_size = 4
-indent_style = space
+indent_style = tab
 trim_trailing_whitespace = true
-
