Revise documentation and configure markdownlint
Markdownlint is a VS Code extension that lints markdown files.
Rules can be disabled in settings.json (or .markdownlint files).

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,7 @@
 {
+    "markdownlint.config": {
+        "ul-start-left": false,
+        "ul-indent": false,
+        "no-multiple-blanks": false
+    }
 }
