Some maintenance (C#7, minor fixes)

--- a/src/Cdb.Test/Cdb.Test.csproj
+++ b/src/Cdb.Test/Cdb.Test.csproj
@@ -2,8 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-
     <IsPackable>false</IsPackable>
+    <RootNamespace>Sylphe.Cdb.Test</RootNamespace>
+    <AssemblyName>Sylphe.Cdb.Test</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
