--- a/src/Cdb/Cdb.csproj
+++ b/src/Cdb/Cdb.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <RootNamespace>Sylphe.Cdb</RootNamespace>
+    <AssemblyName>Sylphe.Cdb</AssemblyName>
   </PropertyGroup>
 
 </Project>
