--- a/src/Json.Test/Json.Test.csproj
+++ b/src/Json.Test/Json.Test.csproj
@@ -2,8 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-
     <IsPackable>false</IsPackable>
+    <RootNamespace>Sylphe.Json.Test</RootNamespace>
+    <AssemblyName>Sylphe.Json.Test</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
