--- a/src/Json/Json.csproj
+++ b/src/Json/Json.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <RootNamespace>Sylphe.Json</RootNamespace>
+    <AssemblyName>Sylphe.Json</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
