Use .NET Core Test Explorer extension for VS Code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,7 @@
         "ul-start-left": false,
         "ul-indent": false,
         "no-multiple-blanks": false
-    }
+    },
+    "dotnet-test-explorer.enableTelemetry": false,
+    "dotnet-test-explorer.testProjectPath": "**/*Test.csproj"
 }
